--- a/guide/index.html
+++ b/guide/index.html
@@ -114,6 +114,56 @@
 
     .privacy { font-size: 12px; color: #4b5563; margin-top: 12px; }
 
+    .guide-preview {
+      display: flex; justify-content: center; margin-bottom: 32px;
+      perspective: 800px;
+    }
+    .guide-book {
+      width: 220px; background: linear-gradient(145deg, #1a2744, #111D35);
+      border: 1px solid rgba(255,255,255,0.08); border-radius: 4px 12px 12px 4px;
+      padding: 28px 24px; position: relative;
+      transform: rotateY(-8deg) rotateX(2deg);
+      box-shadow:
+        -6px 6px 20px rgba(0,0,0,0.4),
+        inset -2px 0 8px rgba(255,255,255,0.03);
+      transition: transform 0.4s ease;
+    }
+    .guide-book:hover {
+      transform: rotateY(-2deg) rotateX(1deg) translateY(-4px);
+    }
+    .guide-book::before {
+      content: ''; position: absolute; left: 0; top: 8px; bottom: 8px; width: 3px;
+      background: linear-gradient(to bottom, #F97316, #EA580C);
+      border-radius: 2px 0 0 2px;
+    }
+    .guide-book .book-tag {
+      font-family: monospace; font-size: 9px; color: #F97316;
+      text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 16px;
+      opacity: 0.8;
+    }
+    .guide-book .book-title {
+      font-size: 1rem; font-weight: 700; line-height: 1.3;
+      margin-bottom: 12px; color: #fff;
+    }
+    .guide-book .book-title em {
+      font-style: normal; color: #F97316;
+    }
+    .guide-book .book-subtitle {
+      font-size: 0.7rem; color: #6b7280; line-height: 1.5; margin-bottom: 20px;
+    }
+    .guide-book .book-divider {
+      height: 1px; background: rgba(255,255,255,0.06); margin-bottom: 16px;
+    }
+    .guide-book .book-author {
+      font-family: monospace; font-size: 10px; color: #4b5563;
+    }
+    .guide-book .book-format {
+      position: absolute; bottom: 12px; right: 14px;
+      font-family: monospace; font-size: 9px; color: #F97316;
+      background: rgba(249,115,22,0.1); padding: 2px 8px;
+      border-radius: 4px;
+    }
+
     footer {
       position: relative; z-index: 1;
       border-top: 1px solid rgba(255,255,255,0.05);
@@ -163,6 +213,17 @@
       en moteurs de d&eacute;cision et d'innovation. Chaque levier inclut un exercice
       pratique applicable d&egrave;s votre prochaine rencontre d'&eacute;quipe.
     </p>
+
+    <div class="guide-preview">
+      <div class="guide-book">
+        <div class="book-tag">Guide pratique</div>
+        <div class="book-title">Mobiliser<br /><em>l'intelligence collective</em><br />de votre &eacute;quipe</div>
+        <div class="book-subtitle">5 leviers concrets et exercices pratiques pour vos r&eacute;unions</div>
+        <div class="book-divider"></div>
+        <div class="book-author">Kodra Conseil</div>
+        <div class="book-format">PDF</div>
+      </div>
+    </div>
 
     <div class="card">
       <div id="form-section">
