--- a/guide/index.html
+++ b/guide/index.html
@@ -119,8 +119,8 @@
       perspective: 800px;
     }
     .guide-book {
-      width: 220px; background: linear-gradient(145deg, #1a2744, #111D35);
-      border: 1px solid rgba(255,255,255,0.08); border-radius: 4px 12px 12px 4px;
+      width: 220px; background: linear-gradient(145deg, #ffffff, #f3f4f6);
+      border: 1px solid rgba(0,0,0,0.1); border-radius: 4px 12px 12px 4px;
       padding: 28px 24px; position: relative;
       transform: rotateY(-8deg) rotateX(2deg);
       box-shadow:
@@ -143,19 +143,19 @@
     }
     .guide-book .book-title {
       font-size: 1rem; font-weight: 700; line-height: 1.3;
-      margin-bottom: 12px; color: #fff;
+      margin-bottom: 12px; color: #111827;
     }
     .guide-book .book-title em {
       font-style: normal; color: #F97316;
     }
     .guide-book .book-subtitle {
-      font-size: 0.7rem; color: #6b7280; line-height: 1.5; margin-bottom: 20px;
+      font-size: 0.7rem; color: #6b7280; line-height: 1.5; margin-bottom: 20px; color: #4b5563;
     }
     .guide-book .book-divider {
-      height: 1px; background: rgba(255,255,255,0.06); margin-bottom: 16px;
+      height: 1px; background: rgba(0,0,0,0.08); margin-bottom: 16px;
     }
     .guide-book .book-author {
-      font-family: monospace; font-size: 10px; color: #4b5563;
+      font-family: monospace; font-size: 10px; color: #6b7280;
     }
     .guide-book .book-format {
       position: absolute; bottom: 12px; right: 14px;
